all code committed 2

--- a/src/app/components/users/users-list/users-list.component.html
+++ b/src/app/components/users/users-list/users-list.component.html
@@ -1,7 +1,10 @@
-<div class="user-list-holder">
-  <div class="user" [ngClass]="{'active':user.active}" *ngFor="let user of users" (click)="userSelected(user)">
-    <div>{{user.userName}}</div>
-    <div>{{user.email}}</div>
-    <div>{{user.mobile}}</div>
+<h1>No Of Records: {{users.length}}</h1>
+  <div class="search-results" scrollDir [scrollPercentage]=90>
+    <div class="user" [ngClass]="{'active':user.active}" *ngFor="let user of users" (click)="userSelected(user)">
+      <div>{{user.userName}}</div>
+      <div>{{user.email}}</div>
+      <div>{{user.mobile}}</div>
+    </div>
   </div>
-</div>
+
+
