--- a/src/app/components/users/users-list/users-list.component.html
+++ b/src/app/components/users/users-list/users-list.component.html
@@ -6,5 +6,17 @@
       <div>{{user.mobile}}</div>
     </div>
   </div>
+<div class="ag-holder">
+  <ag-grid-angular 
+    style="width: 500px; height: 500px;" 
+    class="ag-theme-balham"
+    [rowData]="users" 
+    [columnDefs]="columnDefs"
+    [enableSorting]="true"
+    [enableFilter]="true"
+    >
+</ag-grid-angular>
+</div>
+  
 
 
