--- a/src/app/components/core/header/header.component.html
+++ b/src/app/components/core/header/header.component.html
@@ -1,3 +1,8 @@
-<p>
-  header works!
-</p>
+<div class="header">
+  <h1 class="header-content">Header</h1>
+  <div class="logout-btn">
+      <button *ngIf="isLoggedIn" (click)="logout()">Logout</button>
+  </div>
+  <div class="clearfix"></div>
+</div>
+
