--- a/src/app/components/core/menu/menu.component.html
+++ b/src/app/components/core/menu/menu.component.html
@@ -1,7 +1,7 @@
 
   <ul class="menu">
     <li><a routerLink="users">Users</a></li>
-    <li><a routerLink="">Questions</a></li>
+    <li><a routerLink="questions">Questions</a></li>
     <li><a routerLink="">Topics</a></li>
     <li><a routerLink="">Contact Us</a></li>
     <div class="clearfix"></div>
